--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #010036;
+    --primary-color: #000000;
     --white-color: #FFFFFF;
     --light-gray-color: #EEEEEE;
-    --secondary-color: darkkhaki;
+    --secondary-color:#FFCC00;
     --gap: 30px;
 }
 
