--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
 }
 
