--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -16,7 +16,7 @@
 .main-content {
     max-width: 120rem;
     margin: 0 auto;
-    height: 5rem;
+    min-height: 5rem;
     padding: var(--gap);
 }
 
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 5rem;
+    min-height: 5rem;
     padding-top: 0;
     padding-bottom: 0;
 }
