--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 .intro-content {
     position: relative;
+    top:-4rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: stretch;
@@ -7,8 +8,16 @@
     min-height: 100vh;
 }
 
-.intro-text-content{
-
+.intro-text-content, .intro-img{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+.intro-text-content h2{
+    font-size: 6rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
 }
 .intro-img {
     display: flex;
@@ -16,7 +25,7 @@
     justify-content: center;
 }
 
-.intro-img img {
+.intro-img img,.intro-img svg   {
     max-width: 100%;
     height: auto;
 }
