--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .intro-content {
     position: relative;
-    top:-4rem;
+    top: -4rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: stretch;
@@ -8,24 +8,28 @@
     min-height: 100vh;
 }
 
-.intro-text-content, .intro-img{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-}
-.intro-text-content h2{
-    font-size: 6rem;
-    margin-bottom: 5rem;
-    text-transform: uppercase;
-    line-height: 1.2;
-}
+.intro-text-content,
 .intro-img {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
 }
 
-.intro-img img,.intro-img svg   {
+.intro-text-content h2 {
+    font-size: 6rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
+}
+
+.intro-img {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.intro-img img,
+.intro-img svg {
     max-width: 100%;
     height: auto;
 }
@@ -78,4 +82,19 @@
     top: -4rem;
     left: -2rem;
     transform: rotate(5deg)
+}
+
+.gallery-img {
+    width: 100%;
+    max-width: 36rem;
+    max-height: 36rem;
+    overflow: hidden;
+}
+
+.gallery-img img {
+    transition: all 300ms ease-in-out;
+}
+
+.gallery-img img:hover {
+    transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
 }
