--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@
     min-height: 100vh;
 }
 
+.logo {
+    width: 110px;
+    height: 110px;
+}
+
 .intro-text-content,
 .intro-img {
     display: flex;
