--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,3 +103,8 @@
 .gallery-img img:hover {
     transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
 }
+
+.img-qrcode {
+    width: 100px;
+    height: 100px;
+}
